1_section_one/logs/scheduler/2022-02-02/data_ingestion_gcs_dag.py.log
[2022-02-02 11:06:53,515] {processor.py:163} INFO - Started process (PID=55) to work on /opt/airflow/dags/data_ingestion_gcs_dag.py
[2022-02-02 11:06:53,516] {processor.py:642} INFO - Processing file /opt/airflow/dags/data_ingestion_gcs_dag.py for tasks to queue
[2022-02-02 11:06:53,517] {logging_mixin.py:109} INFO - [2022-02-02 11:06:53,517] {dagbag.py:500} INFO - Filling up the DagBag from /opt/airflow/dags/data_ingestion_gcs_dag.py
[2022-02-02 11:06:53,527] {logging_mixin.py:109} INFO - [2022-02-02 11:06:53,526] {dagbag.py:334} ERROR - Failed to import: /opt/airflow/dags/data_ingestion_gcs_dag.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/dagbag.py", line 331, in _load_modules_from_file
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 724, in exec_module
  File "<frozen importlib._bootstrap_external>", line 860, in get_code
  File "<frozen importlib._bootstrap_external>", line 791, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/data_ingestion_gcs_dag.py", line 95
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
[2022-02-02 11:06:53,549] {processor.py:656} WARNING - No viable dags retrieved from /opt/airflow/dags/data_ingestion_gcs_dag.py
[2022-02-02 11:06:53,624] {processor.py:171} INFO - Processing /opt/airflow/dags/data_ingestion_gcs_dag.py took 0.142 seconds
[2022-02-02 11:07:23,855] {processor.py:163} INFO - Started process (PID=79) to work on /opt/airflow/dags/data_ingestion_gcs_dag.py
[2022-02-02 11:07:23,857] {processor.py:642} INFO - Processing file /opt/airflow/dags/data_ingestion_gcs_dag.py for tasks to queue
[2022-02-02 11:07:23,857] {logging_mixin.py:109} INFO - [2022-02-02 11:07:23,857] {dagbag.py:500} INFO - Filling up the DagBag from /opt/airflow/dags/data_ingestion_gcs_dag.py
[2022-02-02 11:07:23,859] {logging_mixin.py:109} INFO - [2022-02-02 11:07:23,859] {dagbag.py:334} ERROR - Failed to import: /opt/airflow/dags/data_ingestion_gcs_dag.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/dagbag.py", line 331, in _load_modules_from_file
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 724, in exec_module
  File "<frozen importlib._bootstrap_external>", line 860, in get_code
  File "<frozen importlib._bootstrap_external>", line 791, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/data_ingestion_gcs_dag.py", line 95
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
[2022-02-02 11:07:23,875] {processor.py:656} WARNING - No viable dags retrieved from /opt/airflow/dags/data_ingestion_gcs_dag.py
[2022-02-02 11:07:23,884] {processor.py:171} INFO - Processing /opt/airflow/dags/data_ingestion_gcs_dag.py took 0.031 seconds
[2022-02-02 11:07:54,181] {processor.py:163} INFO - Started process (PID=105) to work on /opt/airflow/dags/data_ingestion_gcs_dag.py
[2022-02-02 11:07:54,186] {processor.py:642} INFO - Processing file /opt/airflow/dags/data_ingestion_gcs_dag.py for tasks to queue
[2022-02-02 11:07:54,188] {logging_mixin.py:109} INFO - [2022-02-02 11:07:54,188] {dagbag.py:500} INFO - Filling up the DagBag from /opt/airflow/dags/data_ingestion_gcs_dag.py
[2022-02-02 11:07:54,194] {logging_mixin.py:109} INFO - [2022-02-02 11:07:54,192] {dagbag.py:334} ERROR - Failed to import: /opt/airflow/dags/data_ingestion_gcs_dag.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/dagbag.py", line 331, in _load_modules_from_file
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 724, in exec_module
  File "<frozen importlib._bootstrap_external>", line 860, in get_code
  File "<frozen importlib._bootstrap_external>", line 791, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/data_ingestion_gcs_dag.py", line 95
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
[2022-02-02 11:07:54,272] {processor.py:656} WARNING - No viable dags retrieved from /opt/airflow/dags/data_ingestion_gcs_dag.py
[2022-02-02 11:07:54,317] {processor.py:171} INFO - Processing /opt/airflow/dags/data_ingestion_gcs_dag.py took 0.144 seconds
[2022-02-02 11:08:24,439] {processor.py:163} INFO - Started process (PID=137) to work on /opt/airflow/dags/data_ingestion_gcs_dag.py
[2022-02-02 11:08:24,440] {processor.py:642} INFO - Processing file /opt/airflow/dags/data_ingestion_gcs_dag.py for tasks to queue
[2022-02-02 11:08:24,441] {logging_mixin.py:109} INFO - [2022-02-02 11:08:24,441] {dagbag.py:500} INFO - Filling up the DagBag from /opt/airflow/dags/data_ingestion_gcs_dag.py
[2022-02-02 11:08:24,444] {logging_mixin.py:109} INFO - [2022-02-02 11:08:24,443] {dagbag.py:334} ERROR - Failed to import: /opt/airflow/dags/data_ingestion_gcs_dag.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/dagbag.py", line 331, in _load_modules_from_file
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 724, in exec_module
  File "<frozen importlib._bootstrap_external>", line 860, in get_code
  File "<frozen importlib._bootstrap_external>", line 791, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/data_ingestion_gcs_dag.py", line 95
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
[2022-02-02 11:08:24,482] {processor.py:656} WARNING - No viable dags retrieved from /opt/airflow/dags/data_ingestion_gcs_dag.py
[2022-02-02 11:08:24,505] {processor.py:171} INFO - Processing /opt/airflow/dags/data_ingestion_gcs_dag.py took 0.069 seconds
